#5 Role state, role-list.component.ts