@@ -20,9 +20,9 @@ import org.keycloak.representations.idm.RoleRepresentation;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.OffsetDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -63,6 +63,8 @@ public class SecurityService {
         .orElseThrow(() -> new EntityNotFoundException(User.class, request.getUserKey()));
 
       assignment.setUser(user);
+
+      addRoleToUser(assignment);
     } else if (request.getType() == MembershipType.GROUP) {
       Group group = groupRepository.findByKey(request.getGroupKey())
         .orElseThrow(() -> new EntityNotFoundException(Group.class, request.getGroupKey()));
@@ -75,27 +77,30 @@ public class SecurityService {
 
   @Transactional
   public void syncRolesAndRights() {
-    List<RoleRepresentation> remote = keycloak.roles().list(true);
-
-    // Remove every role without fx_ prefix
-    // roles.removeIf(role -> !role.getName().startsWith("fx_"));
+    var remoteRolesAndRights = keycloak.roles().list(true);
+    var localRoles = roleRepository.findAll();
 
     // Convert to map for easier handling
-    Map<String, RoleRepresentation> remoteMap = remote.stream()
+    var remoteMap = remoteRolesAndRights.stream()
       .collect(Collectors.toMap(RoleRepresentation::getName, Function.identity()));
 
     // Load all rights, which should be existing
-    List<String> localRights = Arrays.stream(Right.values())
+    var localRolesAndRights = Arrays.stream(Right.values())
       .map(Right::toString)
-      .toList();
+      .collect(Collectors.toList());
+
+    // Load all roles, which should be existing
+    localRoles.stream()
+      .map(Role::getName)
+      .forEach(localRolesAndRights::add);
 
     // If right is already existing, remove if it
-    List<String> newRights = localRights.stream()
+    List<String> newRolesAndRights = localRolesAndRights.stream()
       .filter(newRight -> !remoteMap.containsKey(newRight))
       .toList();
 
     // Create all remaining local rights on the server
-    for (String newRight : newRights) {
+    for (String newRight : newRolesAndRights) {
       RoleRepresentation right = new RoleRepresentation();
       right.setName(newRight);
 
@@ -104,16 +109,65 @@ public class SecurityService {
     }
 
     // Remove all roles and rights from the server, which are not needed anymore
-    remote.removeIf(role -> localRights.contains(role.getName()));
-    remote.removeIf(role -> role.getName().startsWith("default-roles-"));
-    remote.removeIf(role -> role.getName().equals("offline_access"));
-    remote.removeIf(role -> role.getName().equals("uma_authorization"));
+    remoteRolesAndRights.removeIf(role -> localRolesAndRights.contains(role.getName()));
+    remoteRolesAndRights.removeIf(role -> role.getName().startsWith("default-roles-"));
+    remoteRolesAndRights.removeIf(role -> role.getName().equals("offline_access"));
+    remoteRolesAndRights.removeIf(role -> role.getName().equals("uma_authorization"));
 
-    for (RoleRepresentation role : remote) {
+    for (RoleRepresentation role : remoteRolesAndRights) {
       keycloak.roles().deleteRole(role.getName());
       log.info(role.getName() + " has been removed from Keycloak");
     }
 
+    // Reload the roles from keycloak
+    var syncedRoles = keycloak.roles().list(false);
+    var syncedRolesMap = syncedRoles.stream()
+      .collect(Collectors.toMap(RoleRepresentation::getName, Function.identity()));
+
+    // Check if every role contains all rights
+    for (Role localRole : localRoles) {
+      var remoteRole = syncedRolesMap.get(localRole.getName());
+
+      // If role does not exist, a clashing request has been made
+      if (remoteRole == null) {
+        log.error("Role " + localRole.getName() + " does not exist on Keycloak");
+        continue;
+      }
+
+      // Check if all rights are assigned to the role
+      var remoteRightsMap = keycloak.roles().get(localRole.getName()).getRoleComposites()
+        .stream()
+        .collect(Collectors.toMap(RoleRepresentation::getName, Function.identity()));
+      var localRights = localRole.getRights();
+
+      var rightsToAdd = localRights.stream()
+        .map(Right::toString)
+        .filter(string -> !remoteRightsMap.containsKey(string))
+        .map(syncedRolesMap::get)
+        .toList();
+      var rightsToRemove = remoteRightsMap.keySet().stream()
+        .filter(remoteRight -> !localRights.contains(Right.get(remoteRight)))
+        .map(syncedRolesMap::get)
+        .toList();
+
+      // Add missing rights and remove obsolete rights
+      keycloak.roles().get(localRole.getName()).deleteComposites(rightsToRemove);
+      keycloak.roles().get(localRole.getName()).addComposites(rightsToAdd);
+    }
+
     log.info("Roles and rights sync completed");
+  }
+
+  private void addRoleToUser(RoleAssignment assignment) {
+    if (assignment.getValidFrom() != null && assignment.getValidFrom().isAfter(OffsetDateTime.now())) {
+      return;
+    }
+
+    var role = keycloak.roles().get(assignment.getRole().getName()).toRepresentation();
+
+    keycloak.users()
+      .get(assignment.getUser().getKey().toString())
+      .roles().realmLevel()
+      .add(List.of(role));
   }
 }
